--- a/templates/base.html
+++ b/templates/base.html
@@ -184,7 +184,7 @@
                 </div>
                 <div class="col-md-4">
                     <h5 class="mb-4">Contacto</h5>
-                    <p class="text-white-50">info@velaris.com<br>+57 1 1234567<br>Bogotá, Colombia</p>
+                    <p class="text-white-50">info@velaris.com<br>+57 322 5251752<br>Medellín, Colombia</p>
                 </div>
             </div>
             <hr class="my-4 bg-light">
