--- a/flights/templates/flights/admin/airport_form.html
+++ b/flights/templates/flights/admin/airport_form.html
@@ -16,7 +16,7 @@
                         <i class="fas fa-save"></i> Guardar
                     </button>
                     <a href="{% url 'admin_airport_list' %}" class="btn btn-secondary">
-                        <i class="fas fa-times"></i> Cancelar
+                            <i class="fas fa-times"></i> Volver
                     </a>
                 </div>
             </form>
