--- a/static/css/base.css
+++ b/static/css/base.css
@@ -103,14 +103,17 @@ footer {
 }
 .custom-toast {
     position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 1100;
+    top: 90px;
+    right: 30px;
+    z-index: 1100; /* Asegura que esté por encima de otros elementos */
     min-width: 300px;
 }
 
-.toast-header .bi {
-    margin-right: 8px;
+.toast-container {
+    position: relative;
+    max-height: 100vh;
+    overflow-y: auto;
+    padding: 10px;
 }
 
 /* Animación para el formulario */
